<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:padding="8dp">

    <TextView
        android:id="@+id/mainTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/main_label"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:padding="25dp" />

    <WebView
        android:id="@+id/mainWebView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:padding="12dp" />

    <TextView
        android:id="@+id/mainTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/hours_label"
        android:layout_below="@id/mainTextView1"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/hours"
        android:id="@+id/textView3"
        android:layout_below="@id/mainTextView2"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/mainFAQButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/faq_button_str"
        android:layout_above="@+id/mainWebView"
        android:layout_alignLeft="@+id/mainWebView"
        android:layout_alignStart="@+id/mainWebView"
        android:layout_toLeftOf="@+id/mainAppointmentButton"
        android:layout_toStartOf="@+id/mainAppointmentButton" />

    <Button
        android:id="@+id/mainAppointmentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appointment_button"
        android:layout_above="@+id/mainWebView"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/mainInfoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/mainWebView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/info_button"/>

</RelativeLayout>